--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,9 @@ ARCH
 -wtf trebam cuvati na steku kad sam u funkcijama, nekad bude problem kad ne sacuvam npr neki $a ili $s iako ga tako nisam
 -(jel ga dotice mmmm neko drugi??)
 -ono za sp sto se gdb buni, heuristic nesto sta vec
+-load/store koliko su fakat spori spram registara (4 instr s registrima vs 1 load/store)
+-sta mi trebamo cuvati od registara kad ulazimo u main(ima li nesto od $a registara da je doslo kao npr argument od _start pa da se to ne sjebe kad budemo zvali neku drugu funkciju preko toga?)
+-ono koliko treba odvojiti na steku
 
 SP
 * -array, iterator, const_iterator
